# Py2SB3

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/scratch/: __init__.py  assets.py  cli.py  dsl.py  library.py  transpiler.py
src/scratch/data/: __init__.py  sounds_library.json  sprites_library.json
tests/: test_transpiler.py
