[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py2sb3"
version = "1.0.1"
description = "Bidirectional Python to Scratch 3.0 transpiler"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["scratch", "transpiler", "education", "programming", "blocks", "sb3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
scratch = "scratch.cli:main"

[project.urls]
Homepage = "https://github.com/Samuelicjones/Py2SB3"
Documentation = "https://github.com/Samuelicjones/Py2SB3#readme"
Issues = "https://github.com/Samuelicjones/Py2SB3/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scratch.data" = ["*.json"]
